# Engine

./: CMakeLists.txt  main.cpp  makefile
include/engine/: camera.h  engine.h  perspective.h
include/glad/: gl.h
include/shapes/: shape.h  sphere.h
src/: engine.cpp  shape.cpp  sphere.cpp  vision.cpp
